--- a/.github/workflows/test-array-api.yml
+++ b/.github/workflows/test-array-api.yml
@@ -1,4 +1,4 @@
-name: test-array-api-numpy
+name: test-array-api
 on:
   push:
   pull_request:
@@ -6,7 +6,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-numpy-array-api-tests:
+  run-array-api-tests:
+    strategy:
+      matrix:
+        backends: [numpy, torch, jax, tensorflow]
+        submodules: [test_array_object, test_constants, test_creation_functions, test_data_type_functions
+                    test_linalg, test_manipulation_functions, test_operators_and_elementwise_functions
+                    test_searching_functions, test_set_functions, test_signatures, test_sorting_functions,
+                    test_special_cases, test_statistical_functions, test_type_promotion, test_utility_functions]
+    continue-on-error: true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️Ivy
@@ -19,9 +27,9 @@ jobs:
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: test-array-api-numpy.yml
+          workflow: test-array-api-meta.yml
           workflow_conclusion: completed
-          name: hypothesis_numpy_zip
+          name: hypothesis_${{ matrix.backends }}_${{ matrix.submodules }}_zip
           path: |
             ivy/.hypothesis/
         continue-on-error: true
@@ -43,11 +51,11 @@ jobs:
           mkdir -p examples
         continue-on-error: true
 
-      - name: Run Frontend Tests
+      - name: Run Array Api Tests
         id: tests
         run: |
           cd ivy
-          ./test_array_api.sh numpy
+          ./test_array_api.sh ${{matrix.backends}} ${{matrix.submodules}}
         continue-on-error: true
 
       - name: Zip Hypothesis Examples
@@ -59,7 +67,7 @@ jobs:
       - name: Upload hypothesis
         uses: actions/upload-artifact@v3
         with:
-          name: hypothesis_numpy_zip
+          name: hypothesis_${{ matrix.backends }}_${{ matrix.submodules }}_zip
           path: |
             ivy/.hypothesis/examples.zip
         continue-on-error: true
