--- a/.github/workflows/test-array-api-meta.yml
+++ b/.github/workflows/test-array-api-meta.yml
@@ -13,6 +13,7 @@ jobs:
         submodules: [test_array_helpers, test_broadcasting, test_equality_mapping
                      test_hypothesis_helpers, test_partial_adopters, test_pytest_helpers,
                      test_signatures, test_special_cases, test_utils]
+    continue-on-error: true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️Ivy
@@ -49,7 +50,7 @@ jobs:
           mkdir -p examples
         continue-on-error: true
 
-      - name: Run Array Api Tests
+      - name: Run Array Api Meta Tests
         id: tests
         run: |
           cd ivy
