max_parallel_jobs

--- a/.github/workflows/test-array-api-meta.yml
+++ b/.github/workflows/test-array-api-meta.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   run-array-api-meta-tests:
     strategy:
+      max-parallel: 10
       matrix:
         backends: [numpy, torch, jax, tensorflow]
         submodules: [test_array_helpers, test_broadcasting, test_equality_mapping
