--- a/.github/workflows/test-array-api-meta.yml
+++ b/.github/workflows/test-array-api-meta.yml
@@ -6,12 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-array-api-meta-tests:
+  run-array-api-tests:
     strategy:
       max-parallel: 10
       matrix:
         backends: [numpy, torch, jax, tensorflow]
-        submodules: [test_array_helpers, test_broadcasting, test_equality_mapping
+        submodules: [test_array_helpers, test_broadcasting, test_equality_mapping,
                      test_hypothesis_helpers, test_partial_adopters, test_pytest_helpers,
                      test_signatures, test_special_cases, test_utils]
     continue-on-error: true
