change artifact name in test-array-api.yml

--- a/.github/workflows/test-array-api.yml
+++ b/.github/workflows/test-array-api.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Upload hypothesis
         uses: actions/upload-artifact@v3
         with:
-          name: hypothesis_${{ matrix.backends }}_${{ matrix.submodules }}_zip
+          name: 'hypothesis_${{ matrix.backends }}_${{ matrix.submodules }}_zip'
           path: |
             ivy/.hypothesis/examples.zip
         continue-on-error: true
