--- a/.github/workflows/test-ivy-core.yml
+++ b/.github/workflows/test-ivy-core.yml
@@ -26,6 +26,7 @@ jobs:
        - name: Download artifact
          uses: dawidd6/action-download-artifact@v2
          with:
+           github_token: ${{secrets.GITHUB_TOKEN}}
            workflow: test-ivy-core.yml
            workflow_conclusion: completed
            name: hypothesis_${{ matrix.backends }}_${{ matrix.submodules }}_zip
