--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,3 +5,9 @@ termcolor==1.1.0
 colorama==0.4.5
 packaging==21.3
 nvidia-ml-py<=11.495.46 # mod_name=pynvml
+
+
+pytest
+pytest-json-report
+hypothesis>=6.55.0
+ndindex>=1.6
