temporarily commented out pypi deploy section of pypi.yml for testing releases

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Add Tag to Version
         run: |
           cd ivy
-          echo "__version__ = '${{ github.ref_name }}'" > ivy/_version.py
+          echo "__version__ = '${{ github.ref_name }}'"
 
-      - name: Upload to PyPI
-        if: startsWith(github.ref, 'refs/tags')
-        env:
-          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-        run: |
-          cd ivy
-          bash deploy_pypi.sh
+      #- name: Upload to PyPI
+      #  if: startsWith(github.ref, 'refs/tags')
+      #  env:
+      #    PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      #  run: |
+      #    cd ivy
+      #    bash deploy_pypi.sh
