Uncommented out the publishing and hardcoded version number for now

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Add Tag to Version
         run: |
           cd ivy
-          echo "__version__ = '${{ github.ref_name }}'"
+          echo "__version__ = 'v0.0.2.0'" > ivy/_version.py
 
-      #- name: Upload to PyPI
+      - name: Upload to PyPI
       #  if: startsWith(github.ref, 'refs/tags')
-      #  env:
-      #    PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      #  run: |
-      #    cd ivy
-      #    bash deploy_pypi.sh
+        env:
+          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          cd ivy
+          bash deploy_pypi.sh
