--- a/.github/workflows/pr-lint-bot.yml
+++ b/.github/workflows/pr-lint-bot.yml
@@ -10,6 +10,5 @@ permissions:
 jobs:
   fix-linting:
     name: PR Lint Bot
-    uses: unifyai/workflows/.github/workflows/pr-lint-bot.yml@automatic-lint-pr
-    secrets: 
-      IVY_BRANCH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: unifyai/workflows/.github/workflows/pr-lint-bot.yml@main
+    secrets: inherit
