--- a/docker/DockerfileGPUMultiCuda
+++ b/docker/DockerfileGPUMultiCuda
@@ -76,12 +76,16 @@ RUN sed -i '/numpy/d' requirements.txt &&\
 ENV PYTHONPATH "/opt/fw/mxnet:/opt/fw/numpy:/opt/fw/jax:/opt/fw/torch:/opt/fw/tensorflow:/opt/fw/paddle:/opt/miniconda/envs/multienv/bin"
 
 
-
-
-
 COPY run_tests_CLI/test_dependencies.py .
 RUN python3 test_dependencies.py -fp requirements.txt,optional_gpu.txt && \
     rm -rf requirements.txt && \
     rm -rf tmp.txt && \
     rm -rf optional_gpu.txt && \
     rm -rf test_dependencies.py
+
+
+# Post installation steps
+COPY .devcontainer/post_create_commands.sh .
+RUN chmod +x post_create_commands.sh && \
+    bash post_create_commands.sh && \
+    rm -rf post_create_commands.sh
