Keep everything in branch

--- a/.github/workflows/pr-lint-bot.yml
+++ b/.github/workflows/pr-lint-bot.yml
@@ -21,9 +21,45 @@ jobs:
   format-code:
     needs: trigger
     name: Trigger lint bot
-    uses: unifyai/workflows/.github/workflows/lint-bot.yml@automatic-lint-pr
-    secrets: inherit
-    with:
-      head-ref: ${{ needs.trigger.outputs.head-ref }}
-      head-repo: ${{ needs.trigger.outputs.head-repo }}
-      only-changed-files: true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️ ${{ github.event.repository.name }}
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.trigger.outputs.head-ref }}
+          repository: ${{ needs.trigger.outputs.head-repo }}
+          token: ${{ secrets.IVY_BRANCH_TOKEN }}
+
+      - name: Get changed files
+        id: changed-files
+        uses: KareemMAX/gh-action-get-changed-files@5a5ee034eff88bee239d4f49cd041fed0bec7480
+        with:
+          token: ${{ secrets.IVY_BRANCH_TOKEN }}
+
+      - name: Setup Python 🐍
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
+
+        
+      - name: Run pre-commit 🚀
+        continue-on-error: true
+        uses: pre-commit/action@v3.0.0
+        with:
+          extra_args: ${{ true && format('--files {0}', join(fromJSON(steps.changed-files.outputs.all), ' ')) || '--all-files' }}
+
+      - name: Check if there are changes 📝
+        id: check
+        run: |
+          if [[ -n "$(git status --porcelain)" ]]; then
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit changes 📝
+        if: steps.check.outputs.changes == 'true'
+        run: |
+          git config --local user.email "ivy.branch@lets-unify.ai"
+          git config --local user.name "ivy-branch"
+          git add .
+          git commit -m "🤖 Lint code"
+          git push
