--- a/.github/workflows/pr-lint-bot.yml
+++ b/.github/workflows/pr-lint-bot.yml
@@ -1,8 +1,8 @@
 name: Trigger lint format
 
 on:
-  pull_request:
-    types: [ labeled, opened, synchronize, reopened, review_requested ]
+  issue_comment:
+    types: [created]
 
 permissions:
   contents: write
@@ -12,4 +12,3 @@ jobs:
     name: PR Lint Bot
     uses: unifyai/workflows/.github/workflows/pr-lint-bot.yml@automatic-lint-pr
     secrets: inherit
-  
