--- a/.github/workflows/pr-lint-bot.yml
+++ b/.github/workflows/pr-lint-bot.yml
@@ -1,9 +1,7 @@
 name: Trigger lint format
 
 on:
-  issue_comment:
-    types: [created, edited, deleted]
-  pull_request:
+  pull_request_target:
     types: [opened, edited, synchronize, reopened]
 
 permissions:
