--- a/.github/workflows/intelligent-tests-pr.yml
+++ b/.github/workflows/intelligent-tests-pr.yml
@@ -6,6 +6,9 @@ on:
 
 permissions:
   actions: read
+  contents: write
+  issues: write
+  pull-requests: write
 jobs:
   display_test_results:
     if: ${{ always() }}
