--- a/.github/workflows/intelligent-tests-pr.yml
+++ b/.github/workflows/intelligent-tests-pr.yml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Write GitHub Comment
         uses: actions/github-script@v6
+        github-token: ${{ secrets.IVY_BRANCH_TOKEN }}
         with:
           script: |
             github.rest.issues.createComment({
