--- a/.github/workflows/intelligent-tests-pr.yml
+++ b/.github/workflows/intelligent-tests-pr.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Write GitHub Comment
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.IVY_BRANCH_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
