--- a/.github/workflows/intelligent-tests-pr.yml
+++ b/.github/workflows/intelligent-tests-pr.yml
@@ -6,8 +6,6 @@ on:
 
 permissions:
   actions: read
-  pull-requests: write
-
 jobs:
   display_test_results:
     if: ${{ always() }}
@@ -35,37 +33,19 @@ jobs:
           else
               echo "This PR does not introduce any new test failures! Yippee!"
           fi
-
-      - name: Write GitHub Comment
-        uses: actions/github-script@v6
+      - name: comment tests on PR
+        uses: machine-learning-apps/pr-comment@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '👋 Thanks for the PR, the tests are ready to view!'
-            })
+          path: combined_failures.txt
 
   run_tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        branch: [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
-                  11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
-                  21, 22, 23, 24, 25, 26, 27, 28, 29, 30,
-                  31, 32, 33, 34, 35, 36, 37, 38, 39, 40,
-                  41, 42, 43, 44, 45, 46, 47, 48, 49, 50,
-                  51, 52, 53, 54, 55, 56, 57, 58, 59, 60,
-                  61, 62, 63, 64, 65, 66, 67, 68, 69, 70,
-                  71, 72, 73, 74, 75, 76, 77, 78, 79, 80,
-                  81, 82, 83, 84, 85, 86, 87, 88, 89, 90,
-                  91, 92, 93, 94, 95, 96, 97, 98, 99, 100,
-                  101, 102, 103, 104, 105, 106, 107, 108, 109, 110,
-                  111, 112, 113, 114, 115, 116, 117, 118, 119, 120,
-                  121, 122, 123, 124, 125, 126, 127, 128 ]
+        branch: [ 2 ]
 
     steps:
       - name: Checkout Ivy 🛎
