fix: adds tf_prob as a subbackend, minor fixes to dockerfile and mappings

--- a/docker/requirement_mappings.json
+++ b/docker/requirement_mappings.json
@@ -4,5 +4,5 @@
   "numpy": ["numpy"],
   "paddle": ["paddlepaddle"],
   "mxnet": ["mxnet"],
-  "torch": ["torchvision"]
+  "torch": ["torchvision","xformers"]
 }
