add(pre-commit hook): mypy

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,3 +36,7 @@ repos:
     rev: 2ea80bc854c7f74b09620151028579083ff92ec2
     hooks:
       - id: ivy-lint
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.5.1
+    hooks:
+    -   id: mypy
