--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -1,8 +1,8 @@
-name: pypi
+name: release-binaries
 on:
   workflow_call:
 jobs:
-  release_binaries:
+  release-binaries:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️Binaries
