fix: required changes for release regarding the python version to build python 3.10 specific wheels

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,8 @@ add-ignore = D100,D101,D102,D103,D104,D105,D106,D107,D400,D205
 [docformatter]
 wrap-summaries = 88
 pre-summary-newline = true
+
+[bdist_wheel]
+python-tag = cp310
+py-limited-api = cp310
+plat-name = manylinux_2_17_x86_64
