--- a/.github/workflows/manual-tests.yml
+++ b/.github/workflows/manual-tests.yml
@@ -37,14 +37,10 @@ jobs:
           submodules: "recursive"
           set-safe-directory: false
 
-      - name: Install ivy and fetch binaries
+      - name: Install Ivy
         run: |
           cd ivy
-          pip3 install -e .
-          mkdir .ivy
-          touch .ivy/key.pem
-          echo -n ${{ secrets.USER_API_KEY }} > .ivy/key.pem
-          cd ..
+          pip install .
 
       - name: Get Job URL
         uses: Tiryoh/gha-jobid-action@v0
@@ -58,6 +54,10 @@ jobs:
         run: |
           pip3 install pymongo
           cd ivy
+          pip3 install -e .
+          mkdir .ivy
+          touch .ivy/key.pem
+          echo -n ${{ secrets.USER_API_KEY }} > .ivy/key.pem
           python3 setup_tests.py ${{ github.event.inputs.test }}
           python3 run_tests.py ${{ secrets.REDIS_CONNECTION_URL }} ${{ secrets.REDIS_PASSWORD }} ${{ secrets.MONGODB_PASSWORD }} 'false' ${{ github.event.inputs.gpu }} ${{ github.run_id }} 'false' ${{ steps.jobs.outputs.html_url }}
         continue-on-error: true
@@ -77,15 +77,6 @@ jobs:
           persist-credentials: false
           submodules: "recursive"
 
-      - name: Install ivy and fetch binaries
-        run: |
-          cd ivy
-          pip3 install -e .
-          mkdir .ivy
-          touch .ivy/key.pem
-          echo -n ${{ secrets.USER_API_KEY }} > .ivy/key.pem
-          cd ..
-
       - name: Get Job URL
         uses: Tiryoh/gha-jobid-action@v0
         id: jobs
@@ -99,6 +90,9 @@ jobs:
           pip3 install pymongo
           cd ivy
           pip3 install -e .
+          mkdir .ivy
+          touch .ivy/key.pem
+          echo -n ${{ secrets.USER_API_KEY }} > .ivy/key.pem
           python setup_tests.py "${{ github.event.inputs.test }}"
           python run_tests.py ${{ secrets.REDIS_CONNECTION_URL }} ${{ secrets.REDIS_PASSWORD }} ${{ secrets.MONGODB_PASSWORD }} ${{ github.event.inputs.version}} 'false' ${{ github.run_id }} 'false' ${{ steps.jobs.outputs.html_url }}
         continue-on-error: true
